# AwWasm

./: .gitmodules  README.md
.github/: copilot-instructions.md
crates/awwasm-runtime/: Cargo.toml
crates/awwasm-runtime/src/: error.rs  func.rs  global.rs  imports.rs  instance.rs  lib.rs  memory.rs  store.rs  table.rs  type_convert.rs  values.rs
